Actualización versión IAIP Oaxaca
Footer con datos propios de IAIP Oaxaca
Header con el logo de IAIP Oaxaca
Breadcum nombre del IAIP Oaxaca

--- a/contratacionesabiertas/captura/views/project_navbar.ejs
+++ b/contratacionesabiertas/captura/views/project_navbar.ejs
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/main"> <img src="/images/inai.svg" style="width: 60px;"></a>
+            <a class="navbar-brand" href="/main"> <img src="/images/iaipoax.png" style="width: 80px;"></a>
         </div>
     </div>
 </nav>
