--- a/contratacionesabiertas/dashboard/views/acerca.ejs
+++ b/contratacionesabiertas/dashboard/views/acerca.ejs
@@ -39,7 +39,7 @@
             <div class="container">   
                    		<ul class="breadcrumb">
                             <li><a href="/contratacionesabiertas/"><i class="glyphicon glyphicon-home"></i></a></li>
-                            <li><a href="/contratacionesabiertas/contratos/">Instituto Nacional de Transparencia, Acceso a la Información y Protección de Datos Personales</a></li>
+                            <li><a href="/contratacionesabiertas/contratos/">Instituto de Acceso a la Información Pública y Protección de Datos Personales del Estado de Oaxaca</a></li>
                             <li><a href="#">Acerca</a></li>
                         </ul>
             </div>               
@@ -62,7 +62,7 @@
         <div class="row">
             <div class="col-md-12 post">
                 <div ng-bind-html="content" class="content ng-binding">
-                    <h1>Acerca de las Contrataciones Abiertas del INAI</h1>
+                    <h1>Acerca de las Contrataciones Abiertas del IAIP Oaxaca</h1>
                     <p>En este sitio podrás visualizar y descargar los Datos Abiertos de los procedimientos de contratación del Instituto Nacional de Transparencia, Acceso a la Información y Protección de Datos Personales (INAI), publicados gradualmente según lo establecido por el Estándar de Datos de Contrataciones Abiertas en México (EDCA-MX).</p>
                     <p>El INAI forma parte del Grupo Impulsor de la <a href="http://contratacionesabiertas.mx" target="_blank"> Alianza para las Contrataciones Abiertas en México (ACA-MX)</a> que busca fomentar e impulsar el EDCA-MX en todos los procedimientos de contratación del sector público. Este estándar pretende ampliar y mejorar la transparencia de las contrataciones al incluir las etapas de planeación y ejecución de los contratos.</p>
                     <p>El INAI actualiza y publica los datos y documentos de sus procedimientos de contratación en todas sus etapas según el EDCA-MX. Los datos presentados en este sitio representan un esfuerzo proactivo que retoma y expande la información publicada por el INAI sobre sus contrataciones en el Portal de Obligaciones de Transparencia, de acuerdo con la Ley General de Transparencia y Acceso a la Información Pública (LGTAIP), así como aquella publicada en el sistema electrónico de contrataciones públicas denominado "CompraNet", de acuerdo con el Reglamento de Adquisiciones, Arrendamientos y Servicios del Instituto Federal de Acceso a la Información y Protección de Datos (RAASIFAI).</p>
