--- a/contratacionesabiertas/dashboard/views/contract.ejs
+++ b/contratacionesabiertas/dashboard/views/contract.ejs
@@ -244,7 +244,7 @@ var indicador = generateIcons(status);
             <div class="container-fluid">   
                    		<ul class="breadcrumb">
                             <li><a href="/contratacionesabiertas/"><i class="glyphicon glyphicon-home"></i></a></li>
-                            <li><a href="/contratacionesabiertas/contratos/">Instituto Nacional de Transparencia, Acceso a la Información y Protección de Datos Personales</a></li>
+                            <li><a href="/contratacionesabiertas/contratos/">Instituto de Acceso a la Información Pública y Protección de Datos Personales del Estado de Oaxaca</a></li>
                             <li><a href="#">Contrato</a></li>
                         </ul>
             </div>               
