--- a/contratacionesabiertas/captura/views/navbar.ejs
+++ b/contratacionesabiertas/captura/views/navbar.ejs
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/main"> <img src="/images/inai.svg" style="width: 60px;"></a>
+            <a class="navbar-brand" href="/main"> <img src="/images/iaipoax.png" style="width: 80px;"></a>
         </div>
     </div>
 </nav>
