--- a/contratacionesabiertas/dashboard/views/datosabiertos.ejs
+++ b/contratacionesabiertas/dashboard/views/datosabiertos.ejs
@@ -106,7 +106,7 @@
       <div class="container"> 
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="/contratacionesabiertas/"><i class="fas fa-home"></i></a></li>
-          <li class="breadcrumb-item"><a href="/contratacionesabiertas/contratos/">Instituto Nacional de Transparencia, Acceso a la Información y Protección de Datos Personales</a></li>
+          <li class="breadcrumb-item"><a href="/contratacionesabiertas/contratos/">Instituto de Acceso a la Información Pública y Protección de Datos Personales del Estado de Oaxaca</a></li>
           <li class="breadcrumb-item active" style="color: #00bfa5;" aria-current="page">Datos abiertos</li>
         </ol>
     </div>
