--- a/contratacionesabiertas/dashboard/views/index.ejs
+++ b/contratacionesabiertas/dashboard/views/index.ejs
@@ -102,7 +102,7 @@
                     <br><br><img src="/contratacionesabiertas/static/images/icono_con.png" >
                     </p>
                     <h2>Contrataciones Abiertas</h2>
-                    <h4>Descubre los datos abiertos, accesibles y oportunos sobre las etapas de planeación, licitación, adjudicación, <br>contratación e implementación de las contrataciones del INAI</h4>
+                    <h4>Descubre los datos abiertos, accesibles y oportunos sobre las etapas de planeación, licitación, adjudicación, <br>contratación e implementación de las contrataciones del IAIP Oaxaca</h4>
                 </div>
             </div>
             <div id="datos_duros">
