--- a/contratacionesabiertas/dashboard/views/politicadepublicacion.ejs
+++ b/contratacionesabiertas/dashboard/views/politicadepublicacion.ejs
@@ -131,7 +131,7 @@
             <div class="container">   
                     <ul class="breadcrumb">
                         <li><a href="/contratacionesabiertas/"><i class="glyphicon glyphicon-home"></i></a></li>
-                        <li><a href="/contratacionesabiertas/contratos/">Instituto Nacional de Transparencia, Acceso a la Información y Protección de Datos Personales</a></li>
+                        <li><a href="/contratacionesabiertas/contratos/">Instituto de Acceso a la Información Pública y Protección de Datos Personales del Estado de Oaxaca</a></li>
                         <li><a href="#">Política de publicación</a></li>
                     </ul>
             </div>               
