--- a/contratacionesabiertas/dashboard/views/contracts.ejs
+++ b/contratacionesabiertas/dashboard/views/contracts.ejs
@@ -220,7 +220,9 @@
 			   <div class="contract-download col-md-1">
                    <p><b>Formato</b></p>
                    <div>
+                        <!-- <a href="<%= `${process.env.CAPTURE_URL||'http://104.192.4.109:3000'}/record-package/${contracts[i].ocid}` %>" download="<%= `record-package_${contracts[i].ocid}.json` %>"><span class="dataset-format" data-format="JSON">JSON</span></a> -->
                         <button onclick="getCP('<%=`${contracts[i].localid}`%>')" style="color:#fff;font-weight: 700;text-transform: uppercase;padding: 5px 7px;background-color: #33ffd1;font-size: 12px;border-radius:3px;border: 0;">JSON</button>
+                        <!-- <a href="#" onclick="test(`${contracts[i].ocid}`)" style="cursor:pointer;"></a><span class="dataset-format" data-format="JSON">JSON</span></a> -->
                         <a href="<%= `/contratacionesabiertas/contrato/${contracts[i].localid}/download` %>" download="<%= `${contracts[i].ocid}.pdf` %>"><span class="dataset-format" data-format="PDF">PDF</span></a>
                    </div>
 			   </div>          
