--- a/contratacionesabiertas/dashboard/views/index.ejs
+++ b/contratacionesabiertas/dashboard/views/index.ejs
@@ -142,7 +142,7 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td><a href="/contratacionesabiertas/contratos/">Instituto Nacional de Transparencia, Acceso a la Información y Protección de Datos Personales</a></td>
+                                    <td><a href="/contratacionesabiertas/contratos/">Instituto de Acceso a la Información Pública y Protección de Datos Personales del Estado de Oaxaca</a></td>
                                     <td>$<%= ( parseInt( metadata.contract_exchangerate_amount_total) ).toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></td>
                                 </tr>
                             </tbody>
